Fix: Do not use java 16 features